Rewrite and improve the whole paper

--- a/lean.bib
+++ b/lean.bib
@@ -34,10 +34,13 @@ abstract="Lean is a new open source theorem prover being developed at Microsoft 
 isbn="978-3-319-21401-6"
 }
 
-@preprint{mathlib,
+@InProceedings{mathlib,
 	title={The Lean mathematical library},
 	author={{The mathlib Community}},
 	year={2020},
+	editor={Blanchette, J. and Hrițcu, C},
+	booktitle = {9th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP 2020)},
+	publisher = {ACM},
 }
 
 @InProceedings{ring-tactic,
@@ -60,4 +63,23 @@ isbn="978-3-540-31820-0"
 	author={Paul-Nicolas Madelaine},
 	year={2019},
 	institution={Vrije Universiteit Amsterdam},
+	note={MSc internship report},
 }
+
+@inproceedings{monad-transformers,
+	author = {Liang, Sheng and Hudak, Paul and Jones, Mark},
+	title = {Monad Transformers and Modular Interpreters},
+	booktitle = {Proceedings of the 22Nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+	series = {POPL '95},
+	year = {1995},
+	isbn = {0-89791-692-1},
+	location = {San Francisco, California, USA},
+	pages = {333--343},
+	numpages = {11},
+	% url = {http://doi.acm.org/10.1145/199448.199528},
+	doi = {10.1145/199448.199528},
+	acmid = {199528},
+	publisher = {ACM},
+	address = {New York, NY, USA}
+}
+
